--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,7 +19,7 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
-        buildConfigField("String", "BASE_URL", "\"https://api.themoviedb.org/\"")
+        buildConfigField "String", "BASE_URL","\"https://api.themoviedb.org/3/\""
         buildConfigField "String", "API_KEY","\"e2e2cae1c5b9256b4dc97f8c430165dc\""
         buildConfigField "String", "BASE_URL_3","\"https://api.themoviedb.org/3/\""
         buildConfigField("String", "SMALL_IMAGE_URL", "\"https://image.tmdb.org/t/p/w200\"")
@@ -96,7 +96,7 @@ dependencies {
     implementation "org.koin:koin-androidx-scope:2.1.5"
 
   //  implementation "dev.chrisbanes.accompanist:accompanist-coil:0.3.3.1
-    implementation("io.coil-kt:coil:1.3.2")
+ //   implementation("io.coil-kt:coil:1.3.2")
 
     implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
     implementation "androidx.lifecycle:lifecycle-viewmodel-compose:1.0.0-alpha07"
@@ -125,9 +125,14 @@ dependencies {
     implementation("androidx.hilt:hilt-work:1.0.0")
     kapt("androidx.hilt:hilt-compiler:1.0.0")
 
+    implementation "com.github.bumptech.glide:glide:4.12.0"
+    kapt "com.github.bumptech.glide:compiler:4.12.0"
+
     implementation("androidx.datastore:datastore-preferences:1.0.0")
 
     implementation("androidx.navigation:navigation-compose:2.4.0-alpha06")
 
     implementation "androidx.hilt:hilt-navigation-compose:$hilt_nav_compose"
+
+    implementation "io.coil-kt:coil-compose:1.3.2"
 }
